@@ -908,6 +908,7 @@ operator|==
 literal|null
 condition|)
 block|{
+comment|// No responses were received from shards. Show local query info.
 name|info
 operator|=
 operator|new
@@ -917,6 +918,58 @@ name|Object
 argument_list|>
 argument_list|()
 expr_stmt|;
+name|SolrPluginUtils
+operator|.
+name|doStandardQueryDebug
+argument_list|(
+name|rb
+operator|.
+name|req
+argument_list|,
+name|rb
+operator|.
+name|getQueryString
+argument_list|()
+argument_list|,
+name|rb
+operator|.
+name|getQuery
+argument_list|()
+argument_list|,
+name|rb
+operator|.
+name|isDebugQuery
+argument_list|()
+argument_list|,
+name|info
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rb
+operator|.
+name|isDebugQuery
+argument_list|()
+operator|&&
+name|rb
+operator|.
+name|getQparser
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|rb
+operator|.
+name|getQparser
+argument_list|()
+operator|.
+name|addDebugInfo
+argument_list|(
+name|info
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
