@@ -1046,47 +1046,62 @@ block|{
 name|NamedList
 name|dbg
 init|=
-literal|null
-decl_stmt|;
-name|dbg
-operator|=
 operator|new
 name|SimpleOrderedMap
 argument_list|()
-expr_stmt|;
-name|SolrIndexSearcher
-name|searcher
-init|=
-name|req
-operator|.
-name|getSearcher
-argument_list|()
 decl_stmt|;
-name|IndexSchema
-name|schema
-init|=
-name|req
-operator|.
-name|getSchema
-argument_list|()
-decl_stmt|;
-name|boolean
-name|explainStruct
-init|=
-name|req
-operator|.
-name|getParams
-argument_list|()
-operator|.
-name|getBool
+name|doStandardQueryDebug
 argument_list|(
-name|CommonParams
-operator|.
-name|EXPLAIN_STRUCT
+name|req
 argument_list|,
-literal|false
+name|userQuery
+argument_list|,
+name|query
+argument_list|,
+name|dbgQuery
+argument_list|,
+name|dbg
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+name|doStandardResultsDebug
+argument_list|(
+name|req
+argument_list|,
+name|query
+argument_list|,
+name|results
+argument_list|,
+name|dbgResults
+argument_list|,
+name|dbg
+argument_list|)
+expr_stmt|;
+return|return
+name|dbg
+return|;
+block|}
+DECL|method|doStandardQueryDebug
+specifier|public
+specifier|static
+name|void
+name|doStandardQueryDebug
+parameter_list|(
+name|SolrQueryRequest
+name|req
+parameter_list|,
+name|String
+name|userQuery
+parameter_list|,
+name|Query
+name|query
+parameter_list|,
+name|boolean
+name|dbgQuery
+parameter_list|,
+name|NamedList
+name|dbg
+parameter_list|)
+block|{
 if|if
 condition|(
 name|dbgQuery
@@ -1134,7 +1149,10 @@ name|toString
 argument_list|(
 name|query
 argument_list|,
-name|schema
+name|req
+operator|.
+name|getSchema
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1151,11 +1169,69 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|doStandardResultsDebug
+specifier|public
+specifier|static
+name|void
+name|doStandardResultsDebug
+parameter_list|(
+name|SolrQueryRequest
+name|req
+parameter_list|,
+name|Query
+name|query
+parameter_list|,
+name|DocList
+name|results
+parameter_list|,
+name|boolean
+name|dbgResults
+parameter_list|,
+name|NamedList
+name|dbg
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 if|if
 condition|(
 name|dbgResults
 condition|)
 block|{
+name|SolrIndexSearcher
+name|searcher
+init|=
+name|req
+operator|.
+name|getSearcher
+argument_list|()
+decl_stmt|;
+name|IndexSchema
+name|schema
+init|=
+name|req
+operator|.
+name|getSchema
+argument_list|()
+decl_stmt|;
+name|boolean
+name|explainStruct
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+name|CommonParams
+operator|.
+name|EXPLAIN_STRUCT
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
 name|NamedList
 argument_list|<
 name|Explanation
@@ -1282,9 +1358,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-return|return
-name|dbg
-return|;
 block|}
 DECL|method|explanationToNamedList
 specifier|public
